--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Timeline interface for making CSS animations",
   "main": "build/js/index.js",
   "scripts": {
+    "start": "./scripts/build",
+    "build": "./scripts/build",
+    "tests": "jest",
+    "lint": "tslint --project tsconfig.json --type-check '@(src|tests|types)/**/*.@(ts|tsx)'",
     "test": "npm run lint && npm run tests -- --coverage"
   },
   "repository": {
@@ -24,7 +28,7 @@
   },
   "homepage": "https://github.com/jakesidsmith/css-animation-timeline#readme",
   "dependencies": {
-    "@types/react": "16.0.17",
+    "@types/react": "16.0.16",
     "@types/react-dom": "16.0.2",
     "@types/react-redux": "5.0.10",
     "autoprefixer": "7.1.6",
@@ -41,13 +45,13 @@
     "typescript": "2.5.3"
   },
   "devDependencies": {
-    "@types/jest": "21.1.4",
+    "@types/jest": "19.2.4",
     "@types/node": "8.0.46",
     "concurrently": "3.5.0",
     "http-server": "0.10.0",
-    "jest": "21.2.1",
+    "jest": "19.0.2",
     "livereload": "0.6.3",
-    "ts-jest": "21.1.3",
+    "ts-jest": "19.0.14",
     "tslint": "5.8.0",
     "tslint-eslint-rules": "4.1.1",
     "watch-less-do-more": "0.2.0",
