--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "./scripts/start",
     "build": "./scripts/build",
     "tests": "jest",
-    "lint": "tslint --project tsconfig.json --type-check '@(src|tests|types)/**/*.@(ts|tsx)'",
+    "lint": "tslint --project tsconfig.json '@(src|tests|types)/**/*.@(ts|tsx)'",
     "test": "npm run lint && npm run tests -- --coverage"
   },
   "repository": {
@@ -47,14 +47,32 @@
   "devDependencies": {
     "@types/jest": "19.2.4",
     "@types/node": "8.0.46",
+    "@types/react-test-renderer": "16.0.0",
     "concurrently": "3.5.0",
     "http-server": "0.10.0",
-    "jest": "19.0.2",
+    "jest": "20.0.4",
     "livereload": "0.6.3",
-    "ts-jest": "19.0.14",
+    "react-test-renderer": "16.0.0",
+    "ts-jest": "20.0.14",
     "tslint": "5.8.0",
     "tslint-eslint-rules": "4.1.1",
     "watch-less-do-more": "0.2.0",
     "watchify": "3.9.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/(__tests__|tests)/.*|\\.(test|spec))\\.(ts|tsx|js|jsx)$",
+    "testPathIgnorePatterns": [
+      "helpers/index.tsx"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx"
+    ],
+    "mapCoverage": true
   }
 }
