--- a/package.json
+++ b/package.json
@@ -46,10 +46,14 @@
     "uglify-js": "3.1.5"
   },
   "devDependencies": {
+    "@types/enzyme": "3.1.0",
+    "@types/enzyme-adapter-react-16": "1.0.0",
     "@types/jest": "19.2.4",
     "@types/node": "8.0.46",
     "@types/react-test-renderer": "16.0.0",
     "concurrently": "3.5.0",
+    "enzyme": "3.1.0",
+    "enzyme-adapter-react-16": "1.0.2",
     "http-server": "0.10.0",
     "jest": "20.0.4",
     "livereload": "0.6.3",
