--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "./scripts/start",
     "build": "./scripts/build",
     "tests": "jest",
-    "lint": "tslint --project tsconfig.json '@(src|tests|types)/**/*.@(ts|tsx)'",
+    "lint": "tslint --project tsconfig.json --exclude 'types/redux/index.d.@(ts|tsx)' '@(src|tests|types)/**/*.@(ts|tsx)'",
     "test": "npm run lint && npm run tests -- --coverage"
   },
   "repository": {
