--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ts-jest": "20.0.14",
     "tslint": "5.8.0",
     "tslint-eslint-rules": "4.1.1",
+    "tslint-react": "3.2.0",
     "watch-less-do-more": "0.2.0",
     "watchify": "3.9.0"
   },
